quick view updated

--- a/templates/master.html
+++ b/templates/master.html
@@ -10,26 +10,15 @@
     {#for add-t-cart-demo#}
     {#    <script >document.getElementsByTagName("html")[0].className += " js";</script >#}
     <link rel="stylesheet" href="{% static 'assets/css/add-to-cart-style.css' %}" >
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script >
-    <!-- CSS only -->
-    {#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"#}
-    {#          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" >#}
-    {#    <!-- JS, Popper.js, and jQuery -->#}
-    {#    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"#}
-    {#            crossorigin="anonymous" ></script >#}
-    {#    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"#}
-    {#            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous" ></script >#}
-    {#    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"#}
-    {#            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous" ></script >#}
     {#MDB#}
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" >
+    {#    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" >#}
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" >
+    {#    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" >#}
     <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" >
+    {#    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" >#}
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" >
+    {#    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" >#}
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" >
     <link rel="stylesheet" href="{% static 'assets/css/custom_bootstrap.css' %}" >
     <link rel="stylesheet" href="{% static 'assets/css/normalize.css' %}" >
@@ -41,23 +30,194 @@
     <link rel="stylesheet" href="{% static 'assets/css/icomoon.css' %}" >
     <link rel="stylesheet" href="{% static 'assets/css/jquery.fancybox.min.css' %}" >
     <link rel="shortcut icon" href="{% static 'assets/images/shortcut_logo.png' %}" >
-{#    <link rel="stylesheet" href="{% static 'assets/css/adjusted_style.css' %}" >#}
+    {#    <link rel="stylesheet" href="{% static 'assets/css/adjusted_style.css' %}" >#}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" >
     <title >{% block head_title %}{% endblock %}</title >
     {% block extra_head %}
     {% endblock %}
 </head >
 <body >
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script >
+{#<script src="{% static 'assets/jquery/jquery.min.js' %}" ></script >#}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" ></script >
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" ></script >
+
+
+<script src="{% static 'assets/js/jquery-ui.min.js' %}" ></script >
+<script src="{% static 'assets/js/jquery.countdown.min.js' %}" ></script >
+<script src="{% static 'assets/js/slick.min.js' %}" ></script >
+<script src="{% static 'assets/js/jquery.easing.js' %}" ></script >
+<script src="{% static 'assets/js/jquery.scrollUp.min.js' %}" ></script >
+<script src="{% static 'assets/js/jquery.zoom.min.js' %}" ></script >
+<script src="{% static 'assets/js/parallax.js' %}" ></script >
+<script src="{% static 'assets/js/jquery.fancybox.js' %}" ></script >
+<script src="{% static 'assets/js/numscroller-1.0.js' %}" ></script >
+<script src="{% static 'assets/js/vanilla-tilt.min.js' %}" ></script >
+<script src="{% static 'assets/js/main.js' %}" ></script >
+{#for add-t-cart-demo#}
+<script src="{% static 'assets/js/add-to-cart-util.js' %}" ></script > <!-- util functions included in the CodyHouse framework -->
+<script src="{% static 'assets/js/add-to-cart-main.js' %}" ></script >
 
 {% if messages %}
     <div class="alert alert-success alert-dismissible fade show" role="alert" >
-    {% for message in messages %}
-        {{ message }}----------alert-{{ message.tags }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
-            <span aria-hidden="true" >&times;</span >
-        </button >
-    {% endfor %}
+        {% for message in messages %}
+            {{ message }}----------alert-{{ message.tags }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
+                <span aria-hidden="true" >&times;</span >
+            </button >
+        {% endfor %}
     </div >
 {% endif %}
+
+{#                           <!-- Trigger the modal with a button -->#}
+{#<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#quickViewModal">Open Modal</button>#}
+
+{% block quick_view %}
+      <<!-- Modal -->
+<div class="modal fade" id="quickViewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" >
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document" >
+        <div class="modal-content" >
+            <div class="modal-header" style="text-align: center; padding: 5px" >
+                <h6 class="modal-title" id="exampleModalLongTitle" style="text-align: center; padding-left: 45%" >Brahman Bull-051</h6 >
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin-left: 0px" >
+                    <span aria-hidden="true" >&times;</span >
+                </button >
+            </div >
+            <div class="modal-body" >
+                <div class="shop-detail" >
+                    <div class="row" >
+                        <div class="col-12 col-lg-6" >
+                            <div class="shop-detail_img" >
+                                <button class="round-icon-btn" id="zoom-btn" ><i class="icon_zoom-in_alt" ></i ></button >
+                                <div class="big-img" >
+                                    {#                                    {% for  image in object.item.images.all %}#}
+                                    <div class="big-img_block" ><img src="{% static 'assets/images/special_offer/c9.jpg' %}" alt="product image" >
+                                    </div >
+                                    <div class="big-img_block" ><img src="{% static 'assets/images/shop/zoom_img_2.png' %}" alt="product image" >
+                                    </div >
+                                    <div class="big-img_block" ><img src="{% static 'assets/images/shop/zoom_img_3.png' %}" alt="product image" >
+                                    </div >
+                                    {#                                    {% endfor %}#}
+                                </div >
+                                <div class="slide-img" >
+                                    {#                                    {% for  image in object.item.images.all %}#}
+                                    <div class="slide-img_block" ><img src="{% static 'assets/images/special_offer/c9.jpg' %}" alt="product image" >
+                                    </div >
+                                    <div class="slide-img_block" ><img src="{% static 'assets/images/shop/zoom_img_2.png' %}" alt="product image" >
+                                    </div >
+                                    <div class="slide-img_block" ><img src="{% static 'assets/images/shop/zoom_img_3.png' %}" alt="product image" >
+                                    </div >
+                                    {#                                    {% endfor %}#}
+                                </div >
+                            </div >
+                            <div class="img_control" ></div >
+                        </div >
+                        <div class="col-12 col-lg-6" >
+                            <div class="shop-detail_info " >
+                                {#                                <h5 class="product-type color-type" >Oranges</h5 >#}
+                                {#                                <h2 class="product-name" >{{ object.item.title }}</h2 >#}
+                                {#                                <p class="product-describe" >{{ object.item.description|truncatewords:25 }} <a class="product-more"#}
+                                {#                                                                                                               href="#tab-1" >View more <i#}
+                                {#                                        class="arrow_carrot-2right" ></i ></a ></p >#}
+                                <p class="delivery-status" >Free delivery</p >
+                                <div >
+                                    <ul >
+                                        <li >&bull; Color : Black, White, KABARI</li >
+                                        <li >&bull; Other name : Bulls, Cow, HEIFER</li >
+                                        <li >&bull; Height : 0-5ft, 5.5ft</li >
+                                        <li >&bull; Type : Cattles, GIR COW</li >
+                                        <li >&bull; Application : Dairy Use, Farming Use, BREEDING</li >
+                                        <li >&bull; Feature : 10-16 LITER/ DAY</li >
+                                        <li >&bull; Breed : GIR</li >
+                                        <br >
+                                        <li ><b >Owner : Sadeeq Agro</b ></li >
+                                        <li ><b >Contact : 017070707070</b ></li >
+                                    </ul >
+                                </div >
+                                <div class="price-rate" >
+                                    <h3 class="product-price" >
+                                        <del >$35.00</del >
+                                        $14.00
+                                    </h3 >
+                                    <h5 class="product-rated" ><i class="icon_star" ></i ><i class="icon_star" ></i ><i
+                                            class="icon_star" ></i ><i class="icon_star" ></i ><i
+                                            class="icon_star-half" ></i ><span >(15)</span ></h5 >
+                                </div >
+                                <div class="color-select" >
+                                    <h5 >Select Color:</h5 ><a class="color bg-danger" href="#" ></a ><a class="color bg-success"
+                                                                                                         href="#" ></a ><a
+                                        class="color bg-info" href="#" ></a >
+                                </div >
+                                <div class="quantity-select" style="margin-bottom: 20px" >
+                                    <label for="quantity" >Quatity:</label >
+                                    <input class="no-round-input" id="quantity" type="number" min="0" value="1" >{{ object.unit }}
+                                </div >
+                                <div class="product-select" style="text-align: center" >
+                                    <a class="add-to-cart normal-btn outline" href="{{ object.item.get_add_to_cart_url }}" style="width: 100%" >Add to
+                                                                                                                                                Cart</a >
+                                    {#                                    <br ><a href="{{ object.item.get_remove_from_cart_url }}" > remove</a >#}
+                                </div >
+                            </div >
+                        </div >
+                    </div >
+                </div >
+            </div >
+            <div class="modal-footer" style="padding: 7px" >
+                <div class="product-share text-left" style="float: left; width: 85%" >
+                    <span >Share link:</span >&nbsp; &nbsp;
+                    <a href="#" ><i class="fab fa-facebook-f" > </i ></a >&nbsp;&nbsp;
+                    <a href="#" ><i class="fab fa-twitter" ></i ></a >&nbsp;&nbsp;
+                    <a href="#" ><i class="fab fa-invision" > </i ></a >&nbsp;&nbsp;
+                    <a href="#" ><i class="fab fa-pinterest-p" ></i ></a >&nbsp;&nbsp;
+                </div >
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" >Close</button >
+                {#                <button type="button" class="btn btn-primary" >Save changes</button >#}
+            </div >
+        </div >
+    </div >
+</div >
+
+
+{% endblock %}
+
+<script type="text/javascript" >
+    $(document).ready(function () {
+        $("#quickviewbtn").click(function () {
+
+            $("#quickViewModal").modal("show");
+        });
+
+
+        $("#quickViewModal").on('shown.bs.modal', function () {
+            alert('The modal is fully shown.');
+            $('.slide-img, .big-img').slick('setPosition').slick();
+
+        });
+    });
+
+</script >
+<div id="modal-div" >
+
+</div >
+{#<script type="text/javascript" >#}
+{#    $(document).ready(function () {#}
+{#        var modalDiv = $("#modal-div");#}
+{#        $("#quickviewbtn").on("click", function () {#}
+{##}
+{#            $.ajax({#}
+{#                url: $(this).attr("data-url"),#}
+{#                success: function (data) {#}
+{#                    modalDiv.html(data);#}
+{#                    $("#quickViewModal").modal();#}
+{#                }#}
+{#            });#}
+{#        });#}
+{#    });#}
+{#</script >#}
 
 {% block nav %}
 {% endblock %}
@@ -103,21 +263,18 @@
 
 {% block footer %}
 {% endblock %}
+<script type="text/javascript" >
+    $(document).ready(function () {
+        $("#quickviewbtn").click(function () {
+            $("#quickViewModal").modal("show");
+        });
+        $("#quickViewModal").on('shown.bs.modal', function () {
+            {#alert('The modal is fully shown.');#}
+            $('.slide-img, .big-img').slick('setPosition').slick();
 
-<script src="{% static 'assets/jquery/jquery.min.js' %}" ></script >
-<script src="{% static 'assets/js/jquery-ui.min.js' %}" ></script >
-<script src="{% static 'assets/js/jquery.countdown.min.js' %}" ></script >
-<script src="{% static 'assets/js/slick.min.js' %}" ></script >
-<script src="{% static 'assets/js/jquery.easing.js' %}" ></script >
-<script src="{% static 'assets/js/jquery.scrollUp.min.js' %}" ></script >
-<script src="{% static 'assets/js/jquery.zoom.min.js' %}" ></script >
-<script src="{% static 'assets/js/parallax.js' %}" ></script >
-<script src="{% static 'assets/js/jquery.fancybox.js' %}" ></script >
-<script src="{% static 'assets/js/numscroller-1.0.js' %}" ></script >
-<script src="{% static 'assets/js/vanilla-tilt.min.js' %}" ></script >
-<script src="{% static 'assets/js/main.js' %}" ></script >
-{#for add-t-cart-demo#}
-<script src="{% static 'assets/js/add-to-cart-util.js' %}" ></script > <!-- util functions included in the CodyHouse framework -->
-<script src="{% static 'assets/js/add-to-cart-main.js' %}" ></script >
+        });
+    });
+</script >
+
 </body >
 </html >
