--- a/static/assets/css/adjusted_style.css
+++ b/static/assets/css/adjusted_style.css
@@ -20,6 +20,9 @@
 		3.1 Category Select
 	4. Product
 		4.1 Product Detail
+		4.2 Horizontal Padding
+		4.3 Product Promotion
+	5. Special Offer Slider
 
 *************************************/
 
@@ -74,8 +77,35 @@
 	padding: 20px;
 }
 
+/************************************
+	Horizontal Padding
+*************************************/
+
 .container{
 	max-width: 1366px;
 }
 
+/************************************
+	Product Promotion
+*************************************/
 
+.promotional-grid{
+	padding-bottom: 150px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
+
+/************************************
+	Special Offer Slider
+*************************************/
+
+.offer-slider{
+	margin: 50px;
+	padding-bottom: 100px;
+}
+
+
+.offer-slider .slider .slider_wrapper .slider-block .slider-content .slider-text h1 {
+	color: #fcfcfc;
+}
